[package]
name = "nestrs-telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Logging, tracing, metrics and Server-Timing middleware for nestrs apps."

[features]
# OTLP exporter is the default so a dev who sets OTEL_EXPORTER_OTLP_ENDPOINT
# gets traces out of the box. Drop default-features to ship a leaner binary
# that only does console logging + Server-Timing.
default = ["otlp"]
otlp = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-http",
    "dep:opentelemetry-semantic-conventions",
    "dep:opentelemetry-appender-tracing",
    "dep:tracing-opentelemetry",
    "dep:uuid",
]

[dependencies]
nestrs-core.workspace = true
nestrs-config.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
poem.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true

opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
