[package]
name = "nestrs-testing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "In-process testing harness for nestrs: boot an app's real DI graph and drive its HTTP/GraphQL/MCP surfaces with poem's TestClient, with provider overrides and no socket bound."

[features]
# Satisfy the TelemetryModule boot guard in tests (`with_test_telemetry`).
telemetry = ["dep:nestrs-telemetry"]
# An ephemeral, migrated Postgres database fixture for e2e (`EphemeralDatabase`).
orm = ["dep:sea-orm", "dep:sea-orm-migration"]

[dependencies]
nestrs-core.workspace = true
nestrs-http.workspace = true
anyhow.workspace = true
# `test` adds poem's in-process TestClient; `tower-compat` comes from the
# workspace default and is harmless here.
poem = { workspace = true, features = ["test"] }
# A headless app drives non-HTTP transports on a cancellable background task.
tokio.workspace = true
tokio-util.workspace = true
# Opt-in fixtures: telemetry (boot guard) and a throwaway database for e2e.
nestrs-telemetry = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
sea-orm-migration = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
