[package]
name = "nestrs-throttler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Rate limiting for nestrs: a per-route ThrottlerGuard reading a #[meta(Throttle)] override, backed by an in-memory fixed-window counter."

[dependencies]
# `ThrottlerGuard` is `#[injectable]`; `ThrottlerModule` is a `DynamicModule`.
nestrs-core.workspace = true
# The guard implements the `Guard` trait and reads route metadata via `Reflector`,
# both re-exported here.
nestrs-http.workspace = true
poem.workspace = true
async-trait.workspace = true
